; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_iTCO_vendor_support.c_broken_bios_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_iTCO_vendor_support.c_broken_bios_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.resource*)* @broken_bios_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @broken_bios_stop(%struct.resource* %0) #0 {
  %2 = alloca %struct.resource*, align 8
  %3 = alloca i64, align 8
  store %struct.resource* %0, %struct.resource** %2, align 8
  %4 = load %struct.resource*, %struct.resource** %2, align 8
  %5 = getelementptr inbounds %struct.resource, %struct.resource* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @inl(i32 %6)
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = or i64 %8, 8193
  store i64 %9, i64* %3, align 8
  %10 = load i64, i64* %3, align 8
  %11 = load %struct.resource*, %struct.resource** %2, align 8
  %12 = getelementptr inbounds %struct.resource, %struct.resource* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @outl(i64 %10, i32 %13)
  ret void
}

declare dso_local i64 @inl(i32) #1

declare dso_local i32 @outl(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
